k8s/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cnapp-agent
  labels:
    app: cnapp-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnapp-agent
  template:
    metadata:
      labels:
        app: cnapp-agent
    spec:
      serviceAccountName: cnapp-agent-sa
      containers:
      - name: agent
        image: ckstj8027/cnapp-agent:latest
        imagePullPolicy: Always
